fix: reject blank session users at the canonical LoginFilter gate
PMMFilter's unauthenticated rejection could not fire for the PMmodule routes
it is meant to protect. web.xml maps struts2-execute (line 210) ahead of
PMMFilter (line 306), and Struts terminates the filter chain once it executes
an action, so Struts routes such as /PMmodule/ProgramManager
(struts-pmmodule.xml:66) never reach the later PMMFilter. LoginFilter is the
canonical gate that does run first, and it only rejected a null "user".

A blank "user" is a representable session state, not a hypothetical:
Login2Action stores the provider number as
`strAuth[0] != null ? strAuth[0].trim() : ""`.

- LoginFilter now rejects blank session users through a single
  hasAuthenticatedUser() definition, reused by requiresFacilitySelection() so
  the two checks cannot drift apart.
- PMMFilter uses String.isBlank() instead of trim().isEmpty(); trim() only
  strips code points up to U+0020, so Unicode whitespace such as U+2003 would
  have passed the previous guard through to getProgramDomain().
- Regression coverage pins both: four blank variants ("", spaces, tab/newline,
  U+2003) are rejected at the LoginFilter gate and by PMMFilter, and an
  authenticated request still passes the chain. Reverting the LoginFilter gate
  fails exactly the four new blank cases.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01M4qXXAko3gkLSW1pcvTgh2
Signed-off-by: Michael Yingbull <michael.yingbull@gmail.com>